git commit -m "fix: 약관 및 개인정보처리방침 링크 경로 수정 (autobitget 폴더 연결)"

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
             <p>Dalin Real Estate Agency provides licensed brokerage and mobile app development services in Korea.</p>
             
             <div class="footer-links">
-                <a href="terms.html">서비스이용약관 (Terms)</a> | 
-                <a href="privacy.html">개인정보처리방침 (Privacy)</a>
+                <a href="autobitget/terms.html">서비스이용약관 (Terms)</a> | 
+                <a href="autobitget/privacy.html">개인정보처리방침 (Privacy)</a>
             </div>
         </footer>
     </div>
