--- a/autoupbit/terms.html
+++ b/autoupbit/terms.html
@@ -22,7 +22,7 @@
         <h1>🛡️ 비트대장(Upbit) 서비스 이용약관</h1>
 
         <h2>제1조 (목적)</h2>
-        <p>본 약관은 사용자가 '비트대장'(이하 "서비스")을 기술적 매매 지표를 학습하고 연구하는 전술적 보조 도구로 사용하는 것과 관련하여 필요한 사항을 규정합니다.</p>
+        <p>본 약관은 사용자가 '비트대장'(이하 "서비스")을 기술적 매매 지표를 학습하고 연구하는 전술적 보조 도구로 사용하는 것과 관련하여 필요한 사항을 규정합니다. 본 서비스는 'Dalin Soft'에서 운영합니다.</p>
 
         <h2>제2조 (용어의 정의)</h2>
         <p>* "서비스": 사용자의 Upbit 계정을 연동하여 사용자가 직접 조립한 지표 조합에 따라 현물 매매 명령을 자동 실행하는 소프트웨어입니다.<br>
@@ -66,13 +66,6 @@
                 </tr>
             </tbody>
         </table>
-        <p>* 'Admin' 등급은 시스템 관리 및 테스트를 위해 한도 제한 없이 이용 가능합니다.</p>
-
-        <h2>제6조 (보상형 광고 및 기능 이용)</h2>
-        <p>General 등급 사용자는 서비스 내에서 제공되는 보상형 광고(AdMob) 시청을 완료함으로써 백테스팅, 파라미터 최적화 등 특정 고급 전술 기능에 대한 한시적 이용 권한을 획득할 수 있습니다.</p>
-
-        <h2>제9조 (계약 해지 및 데이터 파기)</h2>
-        <p>사용자는 앱 내 '환경설정' 화면을 통해 언제든지 회원 탈퇴(계약 해지)를 할 수 있습니다. 탈퇴 시 사용자의 이메일 기록을 포함하여 Firebase 및 앱 내 저장된 모든 연동 데이터는 즉시 자동 파기됩니다.</p>
 
         <div class="warning">
             <h2>제10조 (면책조항 및 위험 고지)</h2>
@@ -81,9 +74,12 @@
             * 암호화폐 투자는 높은 변동성으로 인한 원금 손실 위험이 크며, 모든 결과에 대한 책임은 사용자 본인에게 있습니다.</p>
         </div>
 
+        <h2>부칙</h2>
+        <p>본 약관은 <strong>2026년 1월 1일</strong>부터 적용됩니다.</p>
+
         <footer>
             문의: daejangkoreabiz@gmail.com<br>
-            &copy; 2025 Dalin Real Estate Agency. All rights reserved.
+            &copy; 2026 Dalin Soft (Dalin Real Estate Agency). All rights reserved.
         </footer>
     </div>
 </body>
