--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dalin Real Estate Agency & IT Lab</title>
-    <style>
+    <title>Dalin Soft | Real Estate Agency & IT Lab</title> <style>
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; line-height: 1.6; background-color: #f8f9fa; color: #333; margin: 0; padding: 40px 20px; display: flex; justify-content: center; }
         .container { width: 100%; max-width: 900px; }
         header { text-align: center; margin-bottom: 50px; }
@@ -29,8 +28,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Dalin Real Estate Agency & IT Lab</h1>
-            <p class="tagline">Connecting Real Estate with Technology</p>
+            <h1>Dalin Soft & Real Estate</h1> <p class="tagline">Connecting Real Estate with Innovative Software Technology</p>
         </header>
 
         <h2 class="section-title">📱 Mobile Applications</h2>
@@ -70,15 +68,15 @@
         <h2 class="section-title" style="margin-top: 50px;">🏢 Official Business Info</h2>
         <div class="business-info">
             <div class="info-grid">
-                <div class="info-item"><strong>Company Name</strong>Dalin Real Estate Agency</div>
+                <div class="info-item"><strong>Developer / Company</strong>Dalin Soft (Dalin Real Estate Agency)</div>
                 <div class="info-item"><strong>Representative</strong>Seo Cheolho</div>
                 <div class="info-item"><strong>Business Reg. No.</strong>227-22-06839</div>
                 <div class="info-item"><strong>Contact</strong>daejangkoreabiz@gmail.com</div>
                 <div class="info-item"><strong>Address</strong>2F-B215, 3 Arts center-ro 44beon-gil, Bupyeong-gu, Incheon, Korea</div>
-                <div class="info-item"><strong>Business Type</strong>Real Estate Brokerage / SW Development</div>
+                <div class="info-item"><strong>Business Type</strong>Software Development / Real Estate Brokerage</div>
             </div>
         </div>
-        <footer>&copy; 2025 Dalin Real Estate Agency. All rights reserved.</footer>
+        <footer>&copy; 2026 Dalin Soft. All rights reserved.</footer>
     </div>
 </body>
 </html>
